Fixed button issue spacing

--- a/stia/src/style/index.scss
+++ b/stia/src/style/index.scss
@@ -365,7 +365,7 @@ a.about:hover {
 
 #issue-button {
   font-family: "Exo", sans-serif;
-
+  margin: 5px;
   background: rgb(37, 40, 45);
   border: 2px solid rgb(130, 182, 71);
 }
